[tool.poetry]
name = "dmltestys"
version = "0.1.0"
description = ""
authors = ["dml"]

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "^0.21.2"
flask = "*"
numpy = "*"
pygame = "*"
pyside2 = "*"
cython = "*"
opencv-python = "*"
matplotlib = "*"
keras = "*"
sklearn = "*"
typing-extensions = "*"
pillow = "*"
imutils = "*"
pysmartthings = "*"
python-dotenv = "*"
django = "*"
bottle = "*"
mutagen = "*"
jinja2 = "*"
boltons = "*"
flask-sqlalchemy = "*"
flask-migrate = "*"
flask-login = "*"
flask-mail = "*"
pysimplegui = "*"
pyyaml = "*"
sqlalchemy-stubs = "*"
termcolor = "*"
rapidtables = "*"
colorama = "*"
ordered-set = "*"
ordered-set-stubs = "*"
func-timeout = "*"
toolz = "*"
cytoolz = "*"
moshmosh-base = "*"
seaborn = "*"
pyqtgraph = "*"
mechanicalsoup = "*"


[tool.poetry.dev-dependencies]
# cython = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
pytest-sugar = "*"
pytest-xdist = "*"
pylama = "*"
mccabe = "*"
autopep8 = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-simplify = "*"
flake8-2020 = "*"
flake8-annotations-complexity = "*"
flake8-cognitive-complexity = "^0.1.0"
cohesion = "^1.0.0"  # flake8
pdbpp = "*"
pytype = "*"
pyinstaller = "*"
GitPython = "*"

