[tool.poetry]
name = "dmlnotebook"
version = "0.1.0"
description = ""
authors = ["yobmod <yobmod@gmail.com>"]
repository = "https://github.com/Yobmod/dmlnotebook"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "*"  # brings numpy
# typing-extensions = "*"
# data-science-types = "*"
# numpy-stubs = "*"
# pillow = "*"
# pysrim = "*"
# pysimplegui = "*"
# pytoml = "*"
# python-dotenv = "*"
# boltons = "*"
# keras = "*"
# sklearn = "*"
# colorama = "*"
# termcolor = "*"
# chempy = "*"
# pyyaml = "*"
# # returns = "*"
# typer = {extras = ["all"], version = "*"}
# dacite = "*"
# fastapi = {extras = ["all"], version = "*"}
# dill = "*"
# toml = "*"

pandas = "^1.0.3"
jupyter = "^1.0.0"
jupyter_contrib_nbextensions = "^0.5.1"
jupyter_nbextensions_configurator = "^0.4.1"
[tool.poetry.dev-dependencies]
pytest = "*"
cython = "*"
mypy = "*"
pytest-cov = "*"
pytest-mypy = "*"
pytest-sugar = "*"
pytest-xdist = "*"
pylama = "*"
autopep8 = "*"
flake8 = "*"
flake8-comprehensions = "*"
flake8-bugbear = "*"
pdbpp = "*"
# pyinstaller = "*"
# safety = "*"
# black = "^19.10b0"
gitpython = "*"


[build-system]
requires = ["poetry>=1.05"]
build-backend = "poetry.masonry.api"
