[tool.poetry]
name = "dmlapp"
version = "0.1.0"
description = ""
authors = ["yobmod <yobmod@gmail.com>"]
# paths = ["C:\Users\Customer\AppData\Local\pypoetry\Cache\virtualenvs\dmlapp-SA54dGKK-py3.7"]


[tool.poetry.dependencies]
python = "^3.7"
kivy = "*"
kivy-examples = "^1.11.1"
kivy-garden = "^0.1.4"
"kivy_deps.sdl2" = "0.1.*"
"kivy_deps.glew" = "0.1.*"
"kivy_deps.angle" = "0.1.*"
"kivy_deps.gstreamer" = "0.1.*"
pygame = "^1.9.6"
# matplotlib = "*"  # brings numpy
typing-extensions = "*"
# # data-science-types = "*"
# pillow = "*"
# pysrim = "*"
# # pysimplegui = "*"
# python-dotenv = "*"
# # boltons = "*"
# # keras = "*"
# # sklearn = "*"
# colorama = "*"
# termcolor = "*"
# chempy = "*"
# pyyaml = "*"
# # returns = "*"
# typer = {extras = ["all"], version = "*"}
# dacite = "*"
# fastapi = {extras = ["all"], version = "*"}
# # numpy-stubs = { git = "https://github.com/numpy/numpy-stubs.git"}
# dill = "*"
# toml = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
# cython = "*"
mypy = "*"
pytest-cov = "*"
pytest-mypy = "*"
pytest-sugar = "*"
pytest-xdist = "*"
pylama = "*"
autopep8 = "*"
flake8 = "*"
flake8-comprehensions = "*"
pdbpp = "*"
# pyinstaller = "*"
# safety = "*"
# black = "^19.10b0"
gitpython = "*"
python-dotenv = "^0.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
