[tool.poetry]
name = "dmltests-ML"
version = "0.1.0"
description = ""
authors = ["yobmod <yobmod@gmail.com>"]
repository = "https://github.com/Yobmod/dmltests"

[tool.poetry.dependencies]
python = "^3.7"

## General

typing-extensions = "*"
# colorama = "*"
# termcolor = "*"
# boltons = "*"
# toolz = "*"
# cytoolz
# typer = {extras = ["all"], version = "*"}
# dacite = "*"
# returns = "*"
# pydantic = "*"
# ordered-set = "*"
# ordered-set-stubs = "*"
# rapidtables
# logura
# func-timout
# more-itertools

## Files
# python-dotenv = "*"
# pillow = "*"
# pyyaml = "*"
# dill = "*"
# toml = "*"
# imageio = "*"
# pygifsicle = "*"

## GUI / Web
# pysimplegui = "*"
# fastapi = {extras = ["all"], version = "*"}

## Datascience
matplotlib = "*"  # brings numpy
pandas = "*"
# seaborn = "*"
# numpy-stubs = { git = "https://github.com/numpy/numpy-stubs.git"}
# data-science-types = "*"

## Science
# pysrim = "*"
# chempy = "*"

## scraping
# requests
# beautifulsoup
# mechanicalsoup


## ML / CV
tensorflow = "*"
tensorflow-cpu = "*"
# tensorflow-gpu = "*"
tensorflow-estimator = "==2.1.0"
# keras = "*"
sklearn = "*"
# scikit-learn = "^0.21.2"
# opencv-python = "*"
# imutils = "*"
# plantcv = "*"




[tool.poetry.dev-dependencies]
pytest = "*"
cython = "*"
mypy = "*"
pytest-cov = "*"
pytest-mypy = "*"
pytest-sugar = "*"
pytest-xdist = "*"
pylama = "*"
autopep8 = "*"
flake8 = "*"
flake8-comprehensions = "*"
flake8-bugbear = "*"
pdbpp = "*"
# pyinstaller = "*"
# safety = "*"
# black = "^19.10b0"
gitpython = "*"


[build-system]
requires = ["poetry>=1.05"]
build-backend = "poetry.masonry.api"
